mx-packageinstaller (22.7) mx; urgency=medium

  * Adjust pkexec/sudo environment parameter for HOME, XDG_RUNTIME_DIR and SESSION_MANAGER

 -- fehlix <fehlix@mxlinux.org>  Mon, 04 Jul 2022 06:28:54 -0400

mx-packageinstaller (22.6) mx; urgency=medium

  * Add mxpi-launcher to preserve env variables needed to follow USER theme
  * Set HOME to /root, XDG_RUNTIME_DIR to /run/user/0 to make sure if started with sudo -E things go to the right place
  * Display info about MX Test and Backport packages
  * Update package lists (Stable, MX Test, Backports) when packages are installed/removed from another tab

 -- Adrian <adrian@mxlinux.org>  Mon, 13 Jun 2022 01:11:31 -0400

mx-packageinstaller (22.4.3) mx; urgency=medium

  * Make sure text is added at end of output box (clicking inside the output box should not move cursor around)

 -- Adrian <adrian@mxlinux.org>  Mon, 18 Apr 2022 11:28:54 -0400

mx-packageinstaller (22.4.2) mx; urgency=medium

  * Reset filter when clearing the UI 

 -- Adrian <adrian@mxlinux.org>  Fri, 15 Apr 2022 03:09:30 -0400

mx-packageinstaller (22.4.1) mx; urgency=medium

  * Adjust debian-frontend check

 -- fehlix <fehlix@mxlinux.org>  Wed, 13 Apr 2022 17:26:38 -0400

mx-packageinstaller (22.4) mx; urgency=medium

  * Split long package info into details (which has a scroll bar) 

 -- Adrian <adrian@mxlinux.org>  Fri, 01 Apr 2022 15:03:52 -0400

mx-packageinstaller (22.3) mx; urgency=medium

  * Add a configurable timeout for online check, e.g., "timeout=10000" (in milliseconds) in ~/.config/MX-Linux/mx-packageinstaller.conf
  * Optional "skiponlinecheck" key in .conf file. Skip the check with "skiponlinecheck=true"

 -- Adrian <adrian@mxlinux.org>  Mon, 28 Mar 2022 10:22:30 -0400

mx-packageinstaller (21.10) mx; urgency=medium

  * Fix: reset filter combo box when refreshing sources

 -- Adrian <adrian@mxlinux.org>  Fri, 22 Oct 2021 10:31:42 -0400

mx-packageinstaller (21.8) mx; urgency=medium
